packages/css/src/field.css
.ds-field {
  --dsc-field-content-spacing: var(--ds-size-2);
  --dsc-field-counter-over: '%d tegn for mye';
  --dsc-field-counter-under: '%d tegn igjen';
  --dsc-field-description-color: var(--ds-color-neutral-text-subtle);

  @composes ds-print-preserve from './base.css';

  /* The stack (https://every-layout.dev/layouts/stack/) */
  & > * {
    margin-block: 0;
  }
  & > * + * {
    margin-top: var(--dsc-field-content-spacing);
  }

  & [data-field='description'] {
    color: var(--dsc-field-description-color);
    margin-top: 0; /* Line-height removes the need for this */
    margin-block: 0;
  }

  /* "proxy" so attrOrCSS works even if changing --ds- prefix */
  & [data-field='counter'] {
    --_ds-data-over: var(--dsc-field-counter-over);
    --_ds-data-under: var(--dsc-field-counter-under);
  }
  /* Reset validation styling if counter limit is not exceeded */
  /* Using :not([data-state='over']) instead of [data-state='under'] to style before JS has loaded */
  & [data-field='counter']:not([data-state='over']) {
    color: inherit;
    padding-left: 0;
  }
  & [data-field='counter']:not([data-state='over'])::before {
    display: none;
  }
  & [data-field='counter']::after {
    content: attr(data-label); /* Render counter text through attribute to avoid hydration errors */
  }

  /* Using pure HTML elements in selector to make this work if consumer changes name of .ds-input */
  &:not([hidden]),
  & :is(label, input, select, textarea, .ds-input):where(:not([hidden])) {
    display: block; /* Ensure input is not placed on same line as label/description/validation, but respect [hidden] attribute */
  }

  /**
   * States
   */
  &:has([aria-disabled='true']:not(u-option, [role='option'][aria-disabled='true']), :disabled:not(option)) > * {
    cursor: not-allowed;
    opacity: var(--ds-opacity-disabled);
  }

  &:has([aria-readonly='true'], [readonly]) label {
    @composes ds-readonly-icon from './base.css'; /* Activate lock icon for label when readonly */
  }

  /**
   * Toggle inputs
   */
  &[data-clickdelegatefor] {
    cursor: pointer;
  }
  &:has(input:is([type='radio'], [type='checkbox'])) {
    column-gap: var(--dsc-field-content-spacing);
    grid-template-areas: 'input content';
    grid-template-columns: auto 1fr;
    width: fit-content; /* Rather do display: grid + width: fit-content than display: inline-grid to encourage stacked radios */

    &:not([hidden]) {
      display: grid;
    }

    & > * {
      margin-block: 0; /* Reset "the stack" */
      grid-column: content; /* Only allow input in column 1 */
    }

    & label {
      font-weight: var(--ds-font-weight-regular);
    }
    & label::before {
      content: none; /* Hide readonly icon on toggle inputs */
    }

    & input {
      grid-column: input; /* Always place input in column 1 */
      grid-row: 1; /* Always place input in row 1 */
    }

    &:not(:has([readonly], [aria-disabled='true']:not(u-option), :disabled:not(option))) label {
      cursor: pointer;
    }

    &:has(input:focus-visible) {
      @composes ds-focus--visible from './base.css';
    }

    /* Using .ds-input to ensure it's only our component */
    & .ds-input:is([type='radio'], [type='checkbox']):not([aria-label]) {
      translate: 0 calc((1lh - 100%) / 2); /* Align with first line of <label> text, but not if having aria-label as <label> */
    }

    &[data-position='end'] {
      grid-template-areas: 'content input';
      grid-template-columns: 1fr auto;
      width: auto;
    }

    &[data-variant='outline'] {
      --dsc-field-border-color: var(--ds-color-neutral-border-default);
      --dsc-field-border-color--checked: var(--ds-color-border-default);
      --dsc-field-border-color--invalid: var(--ds-color-danger-border-default);
      --dsc-field-border-color--readonly: var(--ds-color-neutral-border-subtle);
      --dsc-field-border-radius: var(--ds-border-radius-lg);
      --dsc-field-border-style: solid;
      --dsc-field-border-width: var(--ds-border-width-default);
      --dsc-field-border-width--active: max(2px, 0.125rem);
      --dsc-field-padding: var(--ds-size-4);
      --_dsc-field-border-color: var(--dsc-field-border-color); /* Using proxy props to easily change source without overwriting states */
      --_dsc-field-outline-width: 0;

      border-color: var(--_dsc-field-border-color);
      border-radius: var(--dsc-field-border-radius);
      border-style: var(--dsc-field-border-style);
      border-width: var(--dsc-field-border-width);
      box-shadow: inset 0 0 0 calc(var(--_dsc-field-outline-width) - var(--dsc-field-border-width)) var(--_dsc-field-border-color);
      padding: var(--dsc-field-padding);
      width: auto;
    }
    &[data-variant='outline']:hover {
      --_dsc-field-outline-width: var(--dsc-field-border-width--active);
    }
    &[data-variant='outline']:has(input:checked) {
      --_dsc-field-border-color: var(--dsc-field-border-color--checked);
      --_dsc-field-outline-width: var(--dsc-field-border-width--active);

      @media (forced-colors: active) {
        border-color: LinkText;
      }
    }
    &[data-variant='outline']:has(input[aria-invalid='true']) {
      --_dsc-field-border-color: var(--dsc-field-border-color--invalid);
    }
    &[data-variant='outline']:has(input:disabled, input[aria-disabled='true']) {
      cursor: not-allowed;
      opacity: var(--ds-opacity-disabled);
      --_dsc-field-outline-width: var(--ds-border-width-default);
      &:has(input:checked) {
        --_dsc-field-outline-width: var(--dsc-field-border-width--active);
      }

      & * {
        opacity: 1; /* Undo default opacity for these children so we can move it out on the tile */
      }
    }
    &[data-variant='outline']:has(input[readonly], input[aria-readonly='true']) {
      --_dsc-field-border-color: var(--dsc-field-border-color--readonly);
      --_dsc-field-outline-width: var(--ds-border-width-default);
      &:has(input:checked) {
        --_dsc-field-outline-width: var(--dsc-field-border-width--active);
      }
      cursor: default;

      @media (forced-colors: active) {
        border-color: GrayText;
      }
    }
  }
}

/**
 * Affix
 */
.ds-field-affixes {
  --dsc-field-affix-border-width: var(--ds-border-width-default);
  --dsc-field-affix-border-style: solid;
  --dsc-field-affix-border-color: var(--ds-color-neutral-border-default);
  --dsc-field-affix-padding-inline: var(--ds-size-4);
  --dsc-field-affix-background: var(--ds-color-neutral-surface-tinted);
  --dsc-field-affix-color: var(--ds-color-neutral-text-subtle);

  background: var(--dsc-field-affix-background);
  border-radius: var(--ds-border-radius-md);
  box-sizing: border-box;
  color: var(--dsc-field-affix-color);
  max-width: 100%;
  white-space: nowrap;

  &:not([hidden]) {
    display: flex;
  }

  &:has([size]) {
    width: fit-content;
  }

  & .ds-field-affix {
    align-items: center;
    border-width: var(--dsc-field-affix-border-width);
    border-style: var(--dsc-field-affix-border-style);
    border-color: var(--dsc-field-affix-border-color);
    flex-shrink: 0;
    padding-inline: var(--dsc-field-affix-padding-inline);

    &:not([hidden]) {
      display: flex;
    }

    &:first-child {
      border-start-start-radius: inherit;
      border-end-start-radius: inherit;
      border-inline-end: 0;
    }

    &:last-child {
      border-start-end-radius: inherit;
      border-end-end-radius: inherit;
      border-inline-start: 0;
    }
  }

  & .ds-input {
    border-width: var(--dsc-field-affix-border-width);
    border-style: var(--dsc-field-affix-border-style);
    flex: 1 1 auto;

    /* if it has affix after */
    &:not(:last-child) {
      border-start-end-radius: 0;
      border-end-end-radius: 0;
    }

    /* if it has affix before */
    &:not(:first-child) {
      border-start-start-radius: 0;
      border-end-start-radius: 0;
    }
  }
}

